--- a/www/public/views/www/football/matches/analyse.ejs
+++ b/www/public/views/www/football/matches/analyse.ejs
@@ -1,9 +1,4 @@
-<h3>Analyse
-    <%= data.match %>
-</h3>
-
-
-
+<h3>Analyse <%= data.match %></h3>
 
 <table class="table" id="crs_table">
     <caption>CRS</caption>
