--- a/www/public/views/www/football/matches/data.ejs
+++ b/www/public/views/www/football/matches/data.ejs
@@ -26,10 +26,34 @@
             <canvas id="ttgodds" width="100%" />
         </div>
     </div>
-    <div class="hilodds">
+    <div id="hilodds"></div>
+    <div id="fhlodds"></div>
+
+
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-xs 6">
+            <canvas id="crsodds_home" width="100%" />
+        </div>
+        <div class="col-lg-6 col-md-6 col-xs 6">
+            <canvas id="fcsodds_home" width="100%" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-xs 6">
+            <canvas id="crsodds_away" width="100%" />
+        </div>
+        <div class="col-lg-6 col-md-6 col-xs 6">
+            <canvas id="fcsodds_away" width="100%" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-xs 6">
+            <canvas id="crsodds_draw" width="100%" />
+        </div>
+        <div class="col-lg-6 col-md-6 col-xs 6">
+            <canvas id="fcsodds_draw" width="100%" />
+        </div>
     </div>
 
-    <div class="crsodds">
-
-    </div>
+    
 </div>
