show match name in data page

--- a/www/public/views/www/football/matches/data.ejs
+++ b/www/public/views/www/football/matches/data.ejs
@@ -1,3 +1,5 @@
+Data <%= data.home.teamNameCH %> VS <%= data.away.teamNameCH %>
+
 <div class="drawable">
     <div class="row">
         <div class="col-lg-6 col-md-6 col-xs 6">
