--- a/www/public/views/www/football/matches/data.ejs
+++ b/www/public/views/www/football/matches/data.ejs
@@ -30,7 +30,7 @@ Data <%= data.home.teamNameCH %> VS <%= data.away.teamNameCH %>
     </div>
     <div id="hilodds"></div>
     <div id="fhlodds"></div>
-
+    <div id="chlodds"></div>
 
     <div class="row">
         <div class="col-lg-6 col-md-6 col-xs 6">
